# pymcp

./: README.md  mcp_status_report.md  pyproject.toml
.aii/: config.yaml
docs/: README.md  advanced_features.md  implementation_details.md  mcp_pymdp_integration.md  mcp_tools.md  pymdp_integration.md
scripts/: README.md  mcp_gridworld_examples.py  mcp_pymdp_example.py  pymcp_examples.py  pymcp_examples_fixed.py  run_all_examples.py  run_with_server.sh  setup_pymdp_path.py  start_fastapi_server.py  start_mcp_server.py  test_agent.py  test_mcp_pymdp.py  test_server.py
src/: main.py
src/mcp/: __init__.py  belief_dynamics.py  client.py  utils.py  visualization.py
src/mcp/client/: __init__.py  config.py  core.py  tools.py
src/mcp/environments/: __init__.py  custom.py  gridworld.py
src/mcp/server/: __init__.py  app.py  fastmcp.py
src/mcp/testing/: __init__.py  fixtures.py  helpers.py  setup.py
src/mcp/visualization/: __init__.py  extensions.py  free_energy.py  generative_model.py  simulation.py
src/pymdp_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: DOCUMENTATION_TESTING.md  README.md  __init__.py  run_all_tests.py  run_and_organize.sh  test_additional_functions.py  test_agent_visualization.py  test_belief_dynamics.py  test_mcp_full.py  test_mcp_tools.py  test_pymdp_interface.py  test_template.py
tests/output/advanced/: advanced_analysis.json
tests/output/belief_dynamics/: sample_belief_dynamics.json
tests/output/core/: core_functions_test.json
tests/output/free_energy/: free_energy_test_data.json
(+5 files in other folders)
